Updated: code migration 17 to 21; some cleaning.